--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                     <h3>Pune</h3>
                     <p>To: <a href="#">Mumbai</a> • <a href="#">Goa</a> • <a href="#">Hampi</a></p>
                 </div>
+                   <div class="destination-card">
+                    <img src="images/pune.jpg" alt="Pune">
+                    <h3>Pune</h3>
+                    <p>To: <a href="#">kolhpur</a> • <a href="#">kolhapur</a> • <a href="#">kolhpaur</a></p>
+                </div>
                 <!-- More destination cards -->
             </div>
         </section>
