--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <h3>Kolkata</h3>
                     <p>To: <a href="#">Ranchi</a> • <a href="#">Digha</a> • <a href="#">Puri</a></p>
                 </div>
-                <div class="destination-card">
+                <div class="destination-card ">
                     <img src="images/ahmedabad.jpg" alt="Ahmedabad">
                     <h3>Ahmedabad</h3>
                     <p>To: <a href="#">Surat</a> • <a href="#">Mumbai</a> • <a href="#">Rajkot</a></p>
@@ -133,7 +133,7 @@
         </section>
 
         <section class="blog-section">
-            <h2>Driving Inspiration: Stories from the Road</h2>
+            <h2>Driving Inspiration: mghfhfv jgvnStories from the Road</h2>
             <div class="blog-cards">
                 <div class="blog-card">
                     <img src="images/business-mobility.jpg" alt="Business Mobility">
